# duckdice.casino

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
.github/agents/: my-agent.agent.md
.github/instructions/: *.instructions.md
.github/workflows/: ci.yml
analytics/bet-stream/: README.md
analytics/simulations/: README.md
backend/: README.md
backend/api-gateway/: Dockerfile  README.md  package-lock.json  package.json
backend/api-gateway/src/: index.js
backend/dice-engine/: Dockerfile  README.md  package.json
backend/dice-engine/src/: index.js
backend/risk-engine/: Dockerfile  README.md  package.json
backend/risk-engine/src/: index.js
backend/wallet-service/: README.md
backend/websocket/: Dockerfile  README.md  package.json
bots/examples/: README.md
bots/strategies/: README.md
contracts/: package.json
contracts/bankroll/: BankrollVault.sol  README.md
contracts/contracts/: DuckDiceBank.sol
contracts/staking/: README.md
contracts/test/: DuckDiceBank.js
contracts/token/: README.md
docs/: architecture.md  codex-master-prompt.md  github-issues.md
frontend/casino-ui/: README.md
infra/docker/: Caddyfile  README.md
infra/kubernetes/: README.md
sdk/js/: README.md  package.json
sdk/js/src/: index.js
sdk/python/: README.md  pyproject.toml
sdk/python/duckdice_sdk/: __init__.py  client.py
services/api/: package.json
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AutobetBotPanel.tsx  DiceAnimation.tsx  DiceControls.tsx  Footer.tsx  Header.tsx  RollHistoryStats.tsx
(+3 files in other folders)
