[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckdice-sdk"
version = "0.1.0"
description = "Python SDK for DuckDice API Gateway"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.32.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["duckdice_sdk*"]
